# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "libinquest"
version = "0.1.0"
authors = ["Marc Schlegel <marc.schlegel@gmx.de>"]
edition = "2021"
description = "A probing tool to check for external service availability."

[dependencies]
thiserror = "1.0.*"
anyhow = "1.0"
log = "0.4.*"
stderrlog = "0.5.*"
rustls = "0.20.*"
reqwest = { version="0.11.*", default-features = false, features=["blocking", "rustls", "rustls-tls-native-roots"]}
url = "2.2.*" # used by reqwest anyways
oracle = "0.5.*"
postgres = {version="0.19.*", features=["with-serde_json-1","with-chrono-0_4", "with-bit-vec-0_6", "with-eui48-1", "with-uuid-1", "with-time-0_3", "with-geo-types-0_7"]}
tokio-postgres-rustls = "0.9.*"
bit-vec = "*"
uuid = "1.*"
eui48 = "1.*"
geo-types = "0.7.*"
bigdecimal = "0.3.0"
tiberius = {version="0.9.*", default-features=false, features=["tds73", "rustls", "chrono", "time", "bigdecimal"]}
tokio = "1.9.*"
tokio-util = "0.6.*"
tokio-postgres = "0.7.0 " # needed for error-mapping from postgres-crate
hocon = { version = "0.9.*" }
secrecy = "0.7.0"
aes = "0.6.0"
block-modes = "0.7.0"
base64 = "0.13.*"
clap = "2.33.*"
term = "0.7.*"
async-std = "1.11.*"
chrono = "0.4.*"
time = "0.3.*"
serde_json = "1.*"

async-native-tls = "0.4.0"

[dev-dependencies]
assert_matches = "1.5"

[features]
default = [
  "tokio-util/compat",
]

[[test]]
# separate integration testing
name = "integration"
path = "tests/integration.rs"

[profile.release]
panic = "abort" # the program will not panic because we properly handle everything
lto = true # link-time-optimizer to reduce binary-size
